individual chart/table exports

--- a/src/index.html
+++ b/src/index.html
@@ -87,8 +87,8 @@
                         <div class="top20tablesection">
                             <h4 class="nospaceunder"><strong><span id="top20gridtitle">&nbsp;</span><span
                                         class="filteredsimple">&nbsp;</span>Employers</strong>
-                                <!-- <span class="dlicon top20ExcelExport"><i style="color:#2baab1;"
-                                        class="fas fa-file-excel fa-1.5x" title="Download data"></i></span> -->
+                                <span class="dlicon top20ExcelExport"><i style="color:#2baab1;"
+                                        class="fas fa-file-excel fa-1.5x" title="Download data"></i></span>
                             </h4>
                             <p class="nospaceabove"><em>by total jobs</em></p>
                         </div>
@@ -114,8 +114,8 @@
                 <hr>
                 <div class="clustersection">
                     <h4 class="nomarg"><strong>Industry Clusters</strong>
-                        <!-- <span class="dlicon clusterExcelExport"><i style="color:#2baab1;"
-                                class="fas fa-file-excel fa-1.5x" title="Download data"></i></span> -->
+                        <span class="dlicon clusterExcelExport"><i style="color:#2baab1;"
+                                class="fas fa-file-excel fa-1.5x" title="Download data"></i></span>
                     </h4>
                     <p>Industry classifications created by MAG, based on Census NAICS codes.</p>
                     <p><span class="filteredKI">&nbsp;</span></p>
@@ -130,8 +130,8 @@
                 </div>
                 <div class="keyindsection">
                     <h4 class="nomarg"><strong>Key Industries</strong>
-                        <!-- <span class="dlicon keyindExcelExport"><i style="color:#2baab1;"
-                                class="fas fa-file-excel fa-1.5x" title="Download data"></i></span> -->
+                        <span class="dlicon keyindExcelExport"><i style="color:#2baab1;"
+                                class="fas fa-file-excel fa-1.5x" title="Download data"></i></span>
                     </h4>
                     <!-- <p class="nomarg"><span class="filteredKI">&nbsp;</span></p> -->
                     <p><span class="filteredCluster">&nbsp;</span></p>
@@ -160,7 +160,6 @@
                             Click on "Clear Filter" to reset the page and select a different category.</em></small></p>
                 <h2 class="nospaceunder"><strong>Foreign-Owned Businesses in <span class="addthe">&nbsp;</span><span
                             class="selectedgeographyFDI">&nbsp;</span></strong></h2>
-                <!-- <p class="fditextpadding">Foreign Direct Investment (FDI) is a key economic driver. For regions across the U.S., FDI brings additional capital, creates jobs, encourages transfer of technology and knowledge, and allows for a wider promotion of products.</p> -->
                 <h4 class="nomarg"><strong><span class="FDIcountry filtercolor">&nbsp;</span></strong></h4>
                 <h4 class="nomarg"><strong><span class="filteredcategoryFDI filtercolor">&nbsp;</span></strong></h4>
                 <div class="totalfdisection">
@@ -193,9 +192,8 @@
                     <div class="col-md-6">
                         <h4 class="nospaceunder"><strong><span id="fdicharttitle">&nbsp;</span><a href="#note"
                                     style="color:#2baab1;">*</a></strong>
-                            <!-- <span class="dlicon fdicountriesExcelExport"><i
-                                    style="color:#2baab1;" class="fas fa-file-excel fa-1.5x"
-                                    title="Download data"></i></span> -->
+                            <span class="dlicon fdicountriesExcelExport"><i style="color:#2baab1;"
+                                    class="fas fa-file-excel fa-1.5x" title="Download data"></i></span>
                         </h4>
                         <p class="nospaceunder"><strong><span
                                     class="filteredcategoryFDI filtercolor">&nbsp;</span></strong></p><em>by total
@@ -207,8 +205,8 @@
                         <div class="row">
                             <h4 class="nospaceunder"><strong>Top 10 Foreign-Owned<span
                                         class="filteredsimplefdi filtercolor">&nbsp;</span>Employers</strong>
-                                <!-- <span class="dlicon fdiEmployersExcelExport"><i style="color:#2baab1;"
-                                        class="fas fa-file-excel fa-1.5x" title="Download data"></i></span> -->
+                                <span class="dlicon fdiEmployersExcelExport"><i style="color:#2baab1;"
+                                        class="fas fa-file-excel fa-1.5x" title="Download data"></i></span>
                                 <br></h4>
                             <p class="nomarg"><strong><span class="FDIcountry">&nbsp;</span></strong></p>
                             <p class="nospaceabove"><em>by total
@@ -221,8 +219,8 @@
                         <div class="row">
                             <h4 class="nospaceunder"><strong>Top 5<span
                                         class="filteredsimplefdi filtercolor">&nbsp;</span>Parent Companies</strong>
-                                <!-- <span class="dlicon fdiParentExcelExport"><i style="color:#2baab1;"
-                                        class="fas fa-file-excel fa-1.5x" title="Download data"></i></span> -->
+                                <span class="dlicon fdiParentExcelExport"><i style="color:#2baab1;"
+                                        class="fas fa-file-excel fa-1.5x" title="Download data"></i></span>
                                 <br></h4>
                             <p class="nomarg"><strong><span class="FDIcountry">&nbsp;</span></strong></p>
                             <p class="nospaceabove"><em>by total
@@ -235,8 +233,8 @@
                 <div class="fdiclustersection">
                     <button class="fdireset">Clear <span class="fdifiltertype">&nbsp;</span>Filter</button>
                     <h4 class="nospaceunder"><strong>Industry Clusters</strong>
-                        <!-- <span class="dlicon fdiclusterExcelExport"><i style="color:#2baab1;"
-                                class="fas fa-file-excel fa-1.5x" title="Download data"></i></span> -->
+                        <span class="dlicon fdiclusterExcelExport"><i style="color:#2baab1;"
+                                class="fas fa-file-excel fa-1.5x" title="Download data"></i></span>
                     </h4>
                     <p class="nospaceabove"><strong><span class="filteredcategoryFDI filtercolor">
                                 &nbsp;</span> <span class="FDIcountry">
@@ -251,8 +249,8 @@
                     <button class="fdireset">Clear <span class="fdifiltertype">&nbsp;</span>Filter</button>
 
                     <h4 class="nospaceunder"><strong>Key Industries</strong>
-                        <!-- <span class="dlicon fdikeyindExcelExport"><i style="color:#2baab1;"
-                                class="fas fa-file-excel fa-1.5x" title="Download data"></i></span> -->
+                        <span class="dlicon fdikeyindExcelExport"><i style="color:#2baab1;"
+                                class="fas fa-file-excel fa-1.5x" title="Download data"></i></span>
                     </h4>
                     <p class="nospaceabove"><strong><span class="filteredcategoryFDI filtercolor">
                                 &nbsp;</span> <span class="FDIcountry">
