top20percent span

--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,8 @@
                         <p class="top20text">For <span class="addthe">&nbsp;</span><span
                                 class="selectedgeography">&nbsp;</span>,
                             the <strong>Top 20<span class="filteredsimple">&nbsp;</span>employers</strong> account for
-                            <span class="top20percent"></span>% of all jobs<span class="inindustry">&nbsp;</span>within
+                            <span class="top20percent">&nbsp;</span>% of all jobs<span
+                                class="inindustry">&nbsp;</span>within
                             <span class="addthe">&nbsp;</span><span class="selectedgeographyFDI">&nbsp;</span>.</p>
                     </div>
                     <div class="col-md-1 top20sharehide"></div>
